# mdc

./: .gitignore  CLAUDE.md  LAZY.md  NEW_REVIEW.md  README.md  RELATE.md  RLM.md  TODO.md  TOOLS.md  config.example.toml  pyproject.toml
.claude/skills/release/: SKILL.md
editors/emacs/: mdc.el  mdc.elc
editors/sublime/: Default.sublime-keymap  Main.sublime-menu  mdc.py  mdc.sublime-commands  mdc.sublime-settings  mdc.sublime-syntax
mdc/: LOGIC-ASCII.md  LOGIC-JSON.md  LOGIC.md  README.md  __main__.py  analysis.py  anthropic_client.py  argue.py  assets.py  cli.py  cmd_analyze.py  cmd_argue.py  cmd_audit.py  cmd_diff.py  cmd_export.py  cmd_index.py  cmd_pdf.py  cmd_reply.py  cmd_review.py  config.example.toml  config.py  dianoia_client.py  dianoia_results.py  edit_tools.py  form.py  library.py  ollama_client.py  openai_client.py  pdf_utils.py  review.py  roxana_client.py  system.example.md  text_utils.py  transcript.py
tests/: test_analysis.py  test_cmd_audit.py  test_cmd_export.py  test_form.py  test_library.py  test_review.py  test_text_utils.py  test_transcript.py
