[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdc"
version = "0.1.21"
description = "Unified CLI for markdown chats with LLMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "openai>=1.30.0",
  "platformdirs>=4.0.0",
]

[project.scripts]
mdc = "mdc.cli:main"

[tool.setuptools]
packages = ["mdc"]

[tool.setuptools.package-data]
mdc = ["*.toml", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
